--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,16 @@ html,body{
     width: 100%;
     height: 100%;
 }
+@keyframes wallShow{
+    0%{
+        background-color: white;
+        transform: scale(0);
+    }
+    100%{
+        background-color: black;
+        transform: scale(1);
+    }
+}
 .header{
     width: 100%;
     height: 10%;
@@ -25,8 +35,10 @@ html,body{
 .block{
     width: 25px;
     height: 25px;
-    border: 0.5px solid #4287f5
+    border: 1px solid #4287f5
 }
 .wall{
-    background-color: #4287f5;
+    background-color: black;
+    border: 1px solid black;
+    animation: wallShow .3s
 }
