--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ html,body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    user-select: none;
 }
 .row{
     display: flex
