--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,46 @@
 *{
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 html,body{
-    margin: 0;
-    width: 100%;
-    height: 100%;
+	margin: 0;
+	width: 100%;
+	height: 100%;
 }
 @keyframes wallShow{
-    0%{
-        background-color: white;
-        transform: scale(0);
-    }
-    100%{
-        background-color: black;
-        transform: scale(1);
-    }
+	0%{
+		background-color: white;
+		transform: scale(0);
+	}
+	100%{
+		background-color: black;
+		transform: scale(1);
+	}
 }
 .header{
-    width: 100%;
-    height: 10%;
-    background-color: black;
+	width: 100%;
+	height: 10%;
+	background-color: black;
 }
 .area{
-    width: 100%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    user-select: none;
+	width: 100%;
+	height: 90%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	user-select: none;
 }
 .row{
-    display: flex
+	display: flex
 }
 .block{
-    width: 25px;
-    height: 25px;
-    border: 1px solid #4287f5
+	width: 25px;
+	height: 25px;
+	border: 1px solid #4287f5;
+	touch-action: none
 }
 .wall{
-    background-color: black;
-    border: 1px solid black;
-    animation: wallShow .3s
+	background-color: black;
+	border: 1px solid black;
+	animation: wallShow .3s
 }
