--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,10 @@ html,body{
 .header{
 	width: 100%;
 	height: 10%;
-	background-color: black;
+	background-color: rgba(33, 33, 33,.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .area{
 	width: 100%;
@@ -58,6 +61,8 @@ html,body{
 	display: flex
 }
 .block{
+    border-radius: 5px;
+    margin: 2px;
 	width: 25px;
 	height: 25px;
 	border: 1px solid #4287f5;
