--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 *{
 	box-sizing: border-box;
+    font-family: 'Montserrat';
 }
 html,body{
 	margin: 0;
 	width: 100%;
 	height: 100%;
+}
+h3{
+    font-weight: 700
+}
+h4{
+    font-weight: 500
 }
 @keyframes wallShow{
 	0%{
@@ -41,7 +48,9 @@ html,body{
 
 
 .header{
-	width: 100%;
+    color: black;
+    padding: 20px 50px;
+    width: 100%;
 	height: 10%;
 	background-color: rgba(33, 33, 33,.1);
     display: flex;
@@ -84,8 +93,23 @@ html,body{
 	background-color: #ccccff ;
 	animation: visitedShow .3s;
 }
-.desc{
+.flex{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center
+}
+.flex h4{
+    margin-right: 25px
+}
+.btn{
+    background-color: #ccccff;
+    font-size: 1.3em;
+    font-weight: 600;
+    border: 0;
+    border-radius: 5px;
+    padding: 15px 25px;
+    transition: all .5s
+}
+.btn:hover{
+    border-radius: 10px;
 }
