--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     font-family: 'Montserrat';
 }
 html,body{
+    background-color: #f5f5f5;
 	margin: 0;
 	width: 100%;
 	height: 100%;
@@ -46,13 +47,12 @@ h4{
 	}
 }
 
-
 .header{
     color: black;
     padding: 20px 50px;
     width: 100%;
 	height: 10%;
-	background-color: rgba(33, 33, 33,.1);
+	background-color: rgba(245, 245, 245,.5);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,6 +66,11 @@ h4{
 	flex-direction: column;
 	user-select: none;
 }
+.area:first-child {
+    display: block;
+    border-radius: 0;
+}
+
 .row{
 	display: flex
 }
@@ -102,14 +107,19 @@ h4{
     margin-right: 25px
 }
 .btn{
-    background-color: #ccccff;
+    cursor: pointer;
+    background-color: #4287f5;
     font-size: 1.3em;
     font-weight: 600;
     border: 0;
     border-radius: 5px;
+    color: white;
     padding: 15px 25px;
     transition: all .5s
 }
 .btn:hover{
     border-radius: 10px;
+}
+.reset{
+    background-color: #ff0d0d
 }
