--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,162 @@
-*{
-	box-sizing: border-box;
-    font-family: 'Montserrat';
+* {
+  box-sizing: border-box;
+  font-family: "Montserrat";
 }
-html,body{
-    background-color: #f5f5f5;
-	margin: 0;
-	width: 100%;
-	height: 100%;
+html,
+body {
+  background-color: #f5f5f5;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
-h3{
-    font-weight: 700
+h3 {
+  font-weight: 700;
 }
-h4{
-    font-weight: 500
+h4 {
+  font-weight: 500;
 }
-@keyframes wallShow{
-	0%{
-		background-color: white;
-		transform: scale(0);
-	}
-	100%{
-		background-color: black;
-		transform: scale(1);
-	}
-}
-
-@keyframes roadShow{
-	0%{
-		background-color: white;
-		transform: scale(0);
-	}
-	100%{
-		background-color: #bcdebb ;
-		transform: scale(1);
-	}
+@keyframes wallShow {
+  0% {
+    background-color: white;
+    transform: scale(0);
+  }
+  100% {
+    background-color: black;
+    transform: scale(1);
+  }
 }
 
-@keyframes visitedShow{
-	0%{
-		background-color: white;
-		transform: scale(0);
-	}
-	100%{
-		background-color: #ccccff;
-		transform: scale(1);
-	}
+@keyframes roadShow {
+  0% {
+    background-color: white;
+    transform: scale(0);
+  }
+  100% {
+    background-color: #bcdebb;
+    transform: scale(1);
+  }
 }
 
-.header{
-    color: black;
-    padding: 20px 50px;
-    width: 100%;
-	height: 10%;
-	background-color: rgba(245, 245, 245,.5);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.area{
-	width: 100%;
-	height: 90%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	user-select: none;
-}
-.area:first-child {
-    display: block;
-    border-radius: 0;
+@keyframes visitedShow {
+  0% {
+    background-color: white;
+    transform: scale(0);
+  }
+  100% {
+    background-color: #ccccff;
+    transform: scale(1);
+  }
 }
 
-.row{
-	display: flex
+.header {
+  color: black;
+  padding: 20px 50px;
+  width: 100%;
+  height: 10%;
+  background-color: rgba(245, 245, 245, 0.5);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.block{
-    border-radius: 5px;
-    margin: 1px;
-	width: 25px;
-	height: 25px;
-	border: 1px solid #4287f5;
-	touch-action: none
-}
-
-.wall{
-	background-color: black!important;
-	border: 1px solid black!important;
-	animation: wallShow .3s!important
-}
-
-.road{
-	background-color: #bcdebb ;
-	animation: roadShow .3s;
+.area {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  user-select: none;
 }
 
+.row {
+  display: flex;
+}
+.block {
+  border-radius: 5px;
+  margin: 1px;
+  min-width: 25px;
+  min-height: 25px;
+  border: 1px solid #4287f5;
+  touch-action: none;
+}
 
-.visited{
-	background-color: #ccccff ;
-	animation: visitedShow .3s;
+.wall {
+  background-color: black !important;
+  border: 1px solid black !important;
+  animation: wallShow 0.3s !important;
 }
-.flex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center
+
+.road {
+  background-color: #bcdebb;
+  animation: roadShow 0.3s;
 }
-.flex h4{
+
+.visited {
+  background-color: #ccccff;
+  animation: visitedShow 0.3s;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.flex h4 {
+  font-size: 1em;
+  margin-right: 25px;
+}
+.btn {
+  cursor: pointer;
+  background-color: #4287f5;
+  font-size: 1.3em;
+  font-weight: 600;
+  border: 0;
+  border-radius: 5px;
+  color: white;
+  padding: 15px 25px;
+  transition: all 0.5s;
+}
+.btn:hover {
+  border-radius: 10px;
+}
+.reset {
+  background-color: #ff0d0d;
+}
+.row-0 .block {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.row .block:last-child {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.row-0 .block:last-child {
+  border-bottom-right-radius: 0;
+}
+.block-0 {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+.startingsvg {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+}
+@media screen and (max-width: 1280px) {
+  .flex h4 {
+    font-size: 0.8em;
+  }
+  h3 {
     font-size: 1em;
-    margin-right: 25px
-}
-.btn{
-    cursor: pointer;
-    background-color: #4287f5;
-    font-size: 1.3em;
-    font-weight: 600;
-    border: 0;
-    border-radius: 5px;
-    color: white;
-    padding: 15px 25px;
-    transition: all .5s
-}
-.btn:hover{
-    border-radius: 10px;
-}
-.reset{
-    background-color: #ff0d0d
-}
-.row-0 .block{
-	border-top-left-radius: 0;
-	border-top-right-radius: 0
-}
-
-.row .block:last-child{
-	border-bottom-left-radius: 0;
-	border-bottom-right-radius: 0
-}
-
-.row-0 .block:last-child{
-	border-bottom-right-radius: 0;
-}
-.block-0{
-	border-bottom-left-radius: 0;
-	border-top-left-radius: 0;
-}
-.startingsvg{
-    width: 25px;
-    height: 25px;
-    position: absolute;
+  }
+  p {
+    font-size: 0.7em;
+  }
+  .btn {
+    font-size: 0.9em;
+  }
+  .header {
+    padding: 10px 20px;
+  }
 }
